--- a/data/visualize.ipynb
+++ b/data/visualize.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import open3d as o3d"
+    "import open3d as o3d\n",
+    "import copy"
    ]
   },
   {
@@ -91,28 +92,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_vis(*geo_objs, default_rotation=None, callback_func=None, save=False, path=None):\n",
-    "    vis = o3d.visualization.Visualizer()\n",
-    "    vis.create_window()\n",
-    "    for obj in geo_objs:  \n",
-    "        vis.add_geometry(obj)\n",
+    "# def my_vis(*geo_objs, default_rotation=None, callback_func=None, save=False, path=None):\n",
+    "#     vis = o3d.visualization.Visualizer()\n",
+    "#     vis.create_window()\n",
+    "#     for obj in geo_objs:  \n",
+    "#         vis.add_geometry(obj)\n",
     "    \n",
-    "    if default_rotation:\n",
-    "        ctr = vis.get_view_control()\n",
-    "        ctr.rotate(*default_rotation)\n",
+    "#     if default_rotation:\n",
+    "#         ctr = vis.get_view_control()\n",
+    "#         ctr.rotate(*default_rotation)\n",
     "    \n",
-    "    vis.register_animation_callback(callback_func)\n",
-    "    vis.run()\n",
+    "#     vis.register_animation_callback(callback_func)\n",
+    "#     vis.run()\n",
     "    \n",
-    "    if (callback_func==None) and save:\n",
-    "        vis.capture_screen_image(path,  do_render=True)\n",
+    "#     if (callback_func==None) and save:\n",
+    "#         vis.capture_screen_image(path,  do_render=True)\n",
     "\n",
-    "    return vis"
+    "#     return vis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "93330df6-e46c-4d97-86a8-7a7e7932d287",
    "metadata": {},
    "outputs": [],
@@ -130,29 +131,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizer = my_vis(pcd1, pcd2, lines, default_rotation=(0,1000), callback_func=rotate_view)"
+    "# visualizer = my_vis(pcd1, pcd2, lines, default_rotation=(0,1000), callback_func=rotate_view)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6a6cc051-704a-470e-a3b5-c1b3b7ca743c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# source: http://www.open3d.org/docs/release/tutorial/visualization/interactive_visualization.html?highlight=visualizer\n",
-    "def demo_crop_geometry(pcd):\n",
-    "    print(\"Demo for manual geometry cropping\")\n",
-    "    print(\n",
-    "        \"1) Press 'Y' twice to align geometry with negative direction of y-axis\"\n",
-    "    )\n",
-    "    print(\"2) Press 'K' to lock screen and to switch to selection mode\")\n",
-    "    print(\"3) Drag for rectangle selection,\")\n",
-    "    print(\"   or use ctrl + left click for polygon selection\")\n",
-    "    print(\"4) Press 'C' to get a selected geometry and to save it\")\n",
-    "    print(\"5) Press 'F' to switch to freeview mode\")\n",
-    "    o3d.visualization.draw_geometries_with_editing([pcd])\n",
+    "import subprocess\n",
+    "TOO_LITTLE_MSG = \"\"\"display dialog \"Please pick at least 3 points :)\" with title \"Oops!\" with icon caution buttons {\"Retry\"}\"\"\"\n",
     "\n",
+    "\n",
+    "# source: http://www.open3d.org/docs/release/tutorial/visualization/interactive_visualization.html?highlight=visualizer\n",
+    "# def demo_crop_geometry(pcd, vis=None):\n",
+    "#     print(\"Demo for manual geometry cropping\")\n",
+    "#     print(\n",
+    "#         \"1) Press 'Y' twice to align geometry with negative direction of y-axis\"\n",
+    "#     )\n",
+    "#     print(\"2) Press 'K' to lock screen and to switch to selection mode\")\n",
+    "#     print(\"3) Drag for rectangle selection,\")\n",
+    "#     print(\"   or use ctrl + left click for polygon selection\")\n",
+    "#     print(\"4) Press 'C' to get a selected geometry and to save it\")\n",
+    "#     print(\"5) Press 'F' to switch to freeview mode\")\n",
+    "#     vis.clear_geometries()\n",
+    "#     vis.add_geometry([pcd])\n",
+    "#     return vis\n",
+    "\n",
+    "def custom_draw_geo(*geo_objs, with_edit=False, pick_point=False, callback_func=rotate_view):\n",
+    "    if with_edit:\n",
+    "        vis = o3d.visualization.VisualizerWithEditing()\n",
+    "    else: \n",
+    "        vis = o3d.visualization.Visualizer()\n",
+    "\n",
+    "    vis.create_window(width=3500, height=2600)\n",
+    "    for geo_obj in geo_objs:\n",
+    "        vis.add_geometry(geo_obj)\n",
+    "        \n",
+    "    ctr = vis.get_view_control()\n",
+    "    ctr.rotate(100, 1000)\n",
+    "    \n",
+    "    opt = vis.get_render_option()\n",
+    "    opt.background_color = np.asarray([0, 0, 0])\n",
+    "    \n",
+    "    vis.register_animation_callback(callback_func)\n",
+    "    vis.run()\n",
+    "    vis.destroy_window()\n",
+    "    \n",
+    "    if with_edit and pick_point:\n",
+    "        return vis.get_picked_points()\n",
     "\n",
     "def draw_registration_result(source, target, transformation):\n",
     "    source_temp = copy.deepcopy(source)\n",
@@ -160,35 +189,51 @@
     "    source_temp.paint_uniform_color([1, 0.706, 0])\n",
     "    target_temp.paint_uniform_color([0, 0.651, 0.929])\n",
     "    source_temp.transform(transformation)\n",
-    "    o3d.visualization.draw_geometries([source_temp, target_temp])\n",
+    "    \n",
+    "    custom_draw_geo(source_temp, target_temp)\n",
+    "    \n",
     "\n",
     "\n",
     "def pick_points(pcd):\n",
     "    print(\"\")\n",
-    "    print(\n",
-    "        \"1) Please pick at least three correspondences using [shift + left click]\"\n",
-    "    )\n",
+    "    print(\"1) Please pick at least three correspondences using [shift + left click]\" )\n",
     "    print(\"   Press [shift + right click] to undo point picking\")\n",
     "    print(\"2) After picking points, press 'Q' to close the window\")\n",
-    "    vis = o3d.visualization.VisualizerWithEditing()\n",
-    "    vis.create_window()\n",
-    "    vis.add_geometry(pcd)\n",
-    "    vis.run()  # user picks points\n",
-    "    vis.destroy_window()\n",
-    "    print(\"\")\n",
-    "    return vis.get_picked_points()\n",
+    "    \n",
+    "    return custom_draw_geo(pcd, with_edit=True, pick_point=True)\n",
+    "\n",
     "\n",
     "\n",
     "def demo_manual_registration(source, target):\n",
     "    print(\"Demo for manual ICP\")\n",
     "    print(\"Visualization of two point clouds before manual alignment\")\n",
+    "    \n",
     "    draw_registration_result(source, target, np.identity(4))\n",
     "\n",
     "    # pick points from two point clouds and builds correspondences\n",
-    "    picked_id_source = pick_points(source)\n",
-    "    picked_id_target = pick_points(target)\n",
-    "    assert (len(picked_id_source) >= 3 and len(picked_id_target) >= 3)\n",
-    "    assert (len(picked_id_source) == len(picked_id_target))\n",
+    "    source.paint_uniform_color([1, 0.706, 0])\n",
+    "    target.paint_uniform_color([0, 0.651, 0.929])\n",
+    "    while True: \n",
+    "        picked_id_target = pick_points(target)\n",
+    "        if len(picked_id_target) >= 3: \n",
+    "            break\n",
+    "        else: \n",
+    "            subprocess.call(\"osascript -e '{}'\".format(TOO_LITTLE_MSG), shell=True)\n",
+    "            continue\n",
+    "        \n",
+    "    while True:\n",
+    "        picked_id_source = pick_points(source)\n",
+    "        if len(picked_id_source) >= 3: \n",
+    "            break\n",
+    "        else: \n",
+    "            subprocess.call(\"osascript -e '{}'\".format(TOO_LITTLE_MSG), shell=True)\n",
+    "            continue\n",
+    "    \n",
+    "    if len(picked_id_source) != len(picked_id_target): \n",
+    "        nr = min(len(picked_id_target), len(picked_id_source))\n",
+    "        picked_id_target = picked_id_target[:nr]\n",
+    "        picked_id_source = picked_id_source[:nr]\n",
+    "        \n",
     "    corr = np.zeros((len(picked_id_source), 2))\n",
     "    corr[:, 0] = picked_id_source\n",
     "    corr[:, 1] = picked_id_target\n",
@@ -198,7 +243,6 @@
     "    p2p = o3d.pipelines.registration.TransformationEstimationPointToPoint()\n",
     "    trans_init = p2p.compute_transformation(source, target,\n",
     "                                            o3d.utility.Vector2iVector(corr))\n",
-    "\n",
     "    # point-to-point ICP for refinement\n",
     "    print(\"Perform point-to-point ICP refinement\")\n",
     "    threshold = 0.03  # 3cm distance threshold\n",
@@ -206,16 +250,63 @@
     "        source, target, threshold, trans_init,\n",
     "        o3d.pipelines.registration.TransformationEstimationPointToPoint())\n",
     "    draw_registration_result(source, target, reg_p2p.transformation)\n",
-    "    print(\"\")\n",
-    "\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    while True:\n",
-    "        try:\n",
-    "            _ = my_vis(pcd1, pcd2, lines, default_rotation=(0,1000), callback_func=rotate_view)\n",
-    "            demo_manual_registration(pcd1, pcd2)\n",
-    "        except:\n",
-    "            continue"
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b243a2c1-36f0-47b4-8b62-c8f673f2900d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Demo for manual ICP\n",
+      "Visualization of two point clouds before manual alignment\n",
+      "\n",
+      "1) Please pick at least three correspondences using [shift + left click]\n",
+      "   Press [shift + right click] to undo point picking\n",
+      "2) After picking points, press 'Q' to close the window\n",
+      "[Open3D INFO] No point has been picked.\n",
+      "[Open3D INFO] No point has been picked.\n",
+      "[Open3D INFO] No point has been picked.\n",
+      "[Open3D INFO] Picked point #25 (-1.6, 0.94, 0.49) to add in queue.\n",
+      "[Open3D INFO] No point has been picked.\n",
+      "[Open3D INFO] Picked point #236 (-1.4, 0.8, 0.81) to add in queue.\n",
+      "[Open3D INFO] Picked point #2819 (-1.6, 0.48, 0.65) to add in queue.\n",
+      "[Open3D INFO] Picked point #7041 (-1.3, 0.11, 0.51) to add in queue.\n",
+      "[Open3D INFO] No point has been picked.\n",
+      "[Open3D INFO] Picked point #1966 (-0.92, 0.16, 0.48) to add in queue.\n",
+      "\n",
+      "1) Please pick at least three correspondences using [shift + left click]\n",
+      "   Press [shift + right click] to undo point picking\n",
+      "2) After picking points, press 'Q' to close the window\n",
+      "[Open3D INFO] No point has been picked.\n",
+      "[Open3D INFO] Picked point #8551 (-0.55, 0.25, 2.2) to add in queue.\n",
+      "[Open3D INFO] No point has been picked.\n",
+      "[Open3D INFO] No point has been picked.\n",
+      "[Open3D INFO] Picked point #8262 (-0.5, 0.2, 2.2) to add in queue.\n",
+      "[Open3D INFO] Picked point #1911 (-0.14, 0.27, 1.9) to add in queue.\n",
+      "[Open3D INFO] Picked point #1574 (-0.14, 0.35, 1.9) to add in queue.\n",
+      "[Open3D INFO] Picked point #7814 (-0.12, 0.36, 1.9) to add in queue.\n",
+      "Compute a rough transform using the correspondences given by user\n",
+      "Perform point-to-point ICP refinement\n",
+      "\n",
+      "Demo for manual ICP\n",
+      "Visualization of two point clouds before manual alignment\n",
+      "\n",
+      "1) Please pick at least three correspondences using [shift + left click]\n",
+      "   Press [shift + right click] to undo point picking\n",
+      "2) After picking points, press 'Q' to close the window\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    # _ = my_vis(pcd1, pcd2, lines, default_rotation=(0,1000), callback_func=rotate_view)\n",
+    "    demo_manual_registration(pcd1, pcd2)"
    ]
   },
   {
@@ -223,7 +314,7 @@
    "id": "8404bf35-2663-418d-ab35-86453e131abf",
    "metadata": {},
    "source": [
-    "## Export"
+    "## Exportdefault_rotation"
    ]
   },
   {
@@ -236,16 +327,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01810abc-70ce-42c0-9243-14561ad729a7",
+   "id": "6284e2aa-ab6a-438d-b2a0-80ee19740cf7",
    "metadata": {},
    "source": [
-    "colors = np.tile([0.6, 0.6, 0.8],  (sel_xyz1.shape[0], 1))\n",
-    "noises = 0.1*np.random.normal(size=(sel_xyz1.shape[0], 1))\n",
+    "colors = np.tile([0.6, 0.6, 0.8],  (xyz1.shape[0], 1))\n",
+    "noises = 0.1*np.random.normal(size=(xyz1.shape[0], 1))\n",
     "pcd1.colors = o3d.utility.Vector3dVector(colors+noises)\n",
-    "voxel_grid = o3d.geometry.VoxelGrid.create_from_point_cloud(pcd1, voxel_size=0.04)\n",
+    "voxel_grid = o3d.geometry.VoxelGrid.create_from_point_cloud(pcd1, voxel_size=0.05)\n",
     "\n",
-    "# vis_and_save([voxel_grid], 'voxel.png')"
+    "my_vis(voxel_grid)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "481997f8-a60b-48f1-b44d-8e53980de011",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
