--- a/data/visualize.ipynb
+++ b/data/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8ed2725f-c53f-4496-9ac9-2c2c93e66f83",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import open3d as o3d\n",
-    "import copy"
+    "import copy\n",
+    "from time import sleep\n",
+    "from string import Template\n"
    ]
   },
   {
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e2fa5967-44fe-4371-abf4-341c98070af1",
    "metadata": {},
    "outputs": [],
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "112acdb3-40da-4c8e-9902-69ca6a5532a1",
    "metadata": {},
    "outputs": [],
@@ -62,6 +64,7 @@
     "xyz2 = data['t_pc']\n",
     "trans = data['trans'].flatten()\n",
     "rot = data['rot']\n",
+    "\n",
     "xyz2 = (xyz2 - VIS_OFFSET_SCALE*trans)@rot\n",
     "\n",
     "matching = data['correspondences']\n",
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9a463e5c-7010-46f7-af50-325c09f9faf3",
    "metadata": {},
    "outputs": [],
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "93330df6-e46c-4d97-86a8-7a7e7932d287",
    "metadata": {},
    "outputs": [],
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e79b1a77-eab2-4794-bc9b-b1371565b3b9",
    "metadata": {},
    "outputs": [],
@@ -136,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6a6cc051-704a-470e-a3b5-c1b3b7ca743c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import subprocess\n",
-    "TOO_LITTLE_MSG = \"\"\"display dialog \"Please pick at least 3 points :)\" with title \"Oops!\" with icon caution buttons {\"Retry\"}\"\"\"\n",
-    "\n",
+    "TOO_LITTLE_MSG = \"\"\"display dialog \"Please pick at least 3 points :)\" with title \"Oops!\" with icon stop buttons {\"Retry\"}\"\"\"\n",
+    "RMSE_MSG = Template(\"osascript -e \\'display dialog \\\"$rmse\\\" with title \\\"The error of your alignment is...\\\" with icon note buttons {\\\"OK\\\"}\\'\")\n",
     "\n",
     "# source: http://www.open3d.org/docs/release/tutorial/visualization/interactive_visualization.html?highlight=visualizer\n",
     "# def demo_crop_geometry(pcd, vis=None):\n",
@@ -178,6 +181,7 @@
     "    \n",
     "    vis.register_animation_callback(callback_func)\n",
     "    vis.run()\n",
+    "        \n",
     "    vis.destroy_window()\n",
     "    \n",
     "    if with_edit and pick_point:\n",
@@ -190,7 +194,15 @@
     "    target_temp.paint_uniform_color([0, 0.651, 0.929])\n",
     "    source_temp.transform(transformation)\n",
     "    \n",
+    "\n",
     "    custom_draw_geo(source_temp, target_temp)\n",
+    "    \n",
+    "    a = np.asarray(source_temp.points)[matching[:,0]]\n",
+    "    b = np.asarray(target_temp.points)[matching[:,1]]\n",
+    "    rmse = np.sqrt(np.mean((a-b)**2))\n",
+    "    subprocess.call(RMSE_MSG.substitute(rmse=rmse), shell=True)\n",
+    "    \n",
+    "    \n",
     "    \n",
     "\n",
     "\n",
@@ -263,37 +275,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Demo for manual ICP\n",
-      "Visualization of two point clouds before manual alignment\n",
-      "\n",
-      "1) Please pick at least three correspondences using [shift + left click]\n",
-      "   Press [shift + right click] to undo point picking\n",
-      "2) After picking points, press 'Q' to close the window\n",
-      "[Open3D INFO] No point has been picked.\n",
-      "[Open3D INFO] No point has been picked.\n",
-      "[Open3D INFO] No point has been picked.\n",
-      "[Open3D INFO] Picked point #25 (-1.6, 0.94, 0.49) to add in queue.\n",
-      "[Open3D INFO] No point has been picked.\n",
-      "[Open3D INFO] Picked point #236 (-1.4, 0.8, 0.81) to add in queue.\n",
-      "[Open3D INFO] Picked point #2819 (-1.6, 0.48, 0.65) to add in queue.\n",
-      "[Open3D INFO] Picked point #7041 (-1.3, 0.11, 0.51) to add in queue.\n",
-      "[Open3D INFO] No point has been picked.\n",
-      "[Open3D INFO] Picked point #1966 (-0.92, 0.16, 0.48) to add in queue.\n",
-      "\n",
-      "1) Please pick at least three correspondences using [shift + left click]\n",
-      "   Press [shift + right click] to undo point picking\n",
-      "2) After picking points, press 'Q' to close the window\n",
-      "[Open3D INFO] No point has been picked.\n",
-      "[Open3D INFO] Picked point #8551 (-0.55, 0.25, 2.2) to add in queue.\n",
-      "[Open3D INFO] No point has been picked.\n",
-      "[Open3D INFO] No point has been picked.\n",
-      "[Open3D INFO] Picked point #8262 (-0.5, 0.2, 2.2) to add in queue.\n",
-      "[Open3D INFO] Picked point #1911 (-0.14, 0.27, 1.9) to add in queue.\n",
-      "[Open3D INFO] Picked point #1574 (-0.14, 0.35, 1.9) to add in queue.\n",
-      "[Open3D INFO] Picked point #7814 (-0.12, 0.36, 1.9) to add in queue.\n",
-      "Compute a rough transform using the correspondences given by user\n",
-      "Perform point-to-point ICP refinement\n",
-      "\n",
       "Demo for manual ICP\n",
       "Visualization of two point clouds before manual alignment\n",
       "\n",
